<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/general"
        android:textColor="@color/gray"
        android:textAlignment="center"
        android:textSize="22dp"/>
    <LinearLayout
        android:background="@color/gray"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="0.3">
        <TextView
            android:paddingTop="30dp"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/work_session_duration"
            android:paddingLeft="5dp"
            android:textSize="20dp"/>
        <EditText
            android:paddingTop="30dp"
            android:textColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:gravity="right"
            android:paddingRight="30dp"
            android:text="25"
            android:cursorVisible="false"
            android:id="@+id/wsession_duration"
            android:inputType="number"
            android:imeOptions="actionDone"
            android:singleLine="true"/>
    </LinearLayout>
    <LinearLayout
        android:background="@color/gray"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.3">
        <TextView
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/break_duration"
            android:paddingLeft="5dp"
            android:textSize="20dp"/>
        <EditText
            android:textColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:gravity="right"
            android:paddingRight="30dp"
            android:text="5"
            android:cursorVisible="false"
            android:id="@+id/break_duration"
            android:inputType="number"
            android:imeOptions="actionDone"
            android:singleLine="true"/>
    </LinearLayout>
    <LinearLayout
        android:background="@color/gray"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.3">
        <TextView
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/long_break_duration"
            android:paddingLeft="5dp"
            android:textSize="20dp" />
        <EditText
            android:textColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:gravity="right"
            android:paddingRight="30dp"
            android:text="15"
            android:cursorVisible="false"
            android:id="@+id/lbreak_duration"
            android:inputType="number"
            android:imeOptions="actionDone"
            android:singleLine="true"/>
    </LinearLayout>
    <LinearLayout
        android:background="@color/gray"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.3">
        <TextView
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/work_sessions"
            android:paddingLeft="5dp"
            android:textSize="20dp"
            />
        <EditText
            android:textColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:gravity="right"
            android:paddingRight="30dp"
            android:text="4"
            android:cursorVisible="false"
            android:id="@+id/work_sessions"
            android:inputType="number"
            android:imeOptions="actionDone"
            android:singleLine="true"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textColor="@color/gray"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/disable_notifications"
            android:gravity="center"
            android:paddingLeft="5dp"
            android:textSize="20dp"/>

        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:button="@null"
            android:drawableRight="?android:attr/listChoiceIndicatorMultiple"
            android:paddingRight="20dp"
            android:id="@+id/disable_notifications" />
    </LinearLayout>
    <LinearLayout
        android:background="@color/gray"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:text="@string/save"
            android:textSize="20dp"
            android:gravity="center"
            android:background="@android:color/transparent"
            android:id="@+id/save_button"
            android:onClick="save_data" />
        <Button
            android:textColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="right"
            android:gravity="center"
            android:background="@android:color/transparent"
            android:text="@string/ok"
            android:textSize="20dp"
            android:id="@+id/close_button"
            android:onClick="close_settings"/>
    </LinearLayout>

</LinearLayout>